# thingino-dfu

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md
.github/workflows/: build.yml  pages.yml  sync-usbboot.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/thingino/cloner/: MainActivity.kt  RemoteClient.kt
android/app/src/main/java/com/thingino/dfu/: ClonerBridge.kt  MainActivity.kt  RemoteClient.kt  TdfuBridge.kt  UsbHelper.kt
android/app/src/main/jni/: CMakeLists.txt  cloner_jni.c  tdfu_jni.c
android/app/src/main/res/color/: switch_thumb_tint.xml  switch_track_decoration_tint.xml  switch_track_tint.xml
android/app/src/main/res/layout/: activity_main.xml  dialog_settings.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: device_filter.xml
cli/: CMakeLists.txt  main.c  remote.c  remote.h
cloner-remote/: main.c
cmake/toolchains/: mingw-w64-x86_64.cmake
dfu-remote/: CMakeLists.txt  main.c  ws.c  ws.h
docs/: ADDING_HARDWARE.md  CLONER_ENGINEERING.md  ENGINEERING.md  dfu-to-sd.md
firmware/cloner/: t31al
firmware/dfu/: .usbboot-source
libcloner/include/cloner/: constants.h  core.h  flash_descriptor.h  platform_profile.h  protocol.h  thingino.h  types.h
libcloner/src/: bootstrap.c  core.c  operations.c  platform.c  utils.c
libcloner/src/ddr/: ddr_binary_builder.c
libcloner/src/firmware/: flash_descriptor.c  handshake.c  loader.c  reader.c  writer.c  writer.h
libcloner/src/flash/: spi_nor_db.c
libcloner/src/usb/: device.c  manager.c  protocol.c
libtdfu/: CMakeLists.txt
libtdfu/include/tdfu/: constants.h  core.h  dfu.h  diag.h  platform_compat.h  platform_profile.h  protocol.h  tdfu.h  types.h
libtdfu/src/: bootstrap.c  core.c  diag.c  operations.c  platform.c  platform.h  utils.c
libtdfu/src/ddr/: ddr_binary_builder.c  ddr_binary_builder.h  ddr_config_database.c  ddr_config_database.h  ddr_controller.c  ddr_controller.h  ddr_ctrl_txx.c  ddr_ctrl_txx.h  ddr_fidb_xb1.c  ddr_fidb_xb2.c  ddr_generator.c  ddr_generator.h  ddr_param_builder.c  ddr_param_builder.h  ddr_phy.c  ddr_phy.h  ddr_phy_common.h  ddr_phy_ddr2.c  ddr_phy_ddr2.h  ddr_rdd_ddr2.c  ddr_rdd_ddr3.c  ddr_rdd_xb2.c  ddr_reg_compute.c  ddr_reg_data.h  ddr_types.h  ddr_utils.c  ddr_utils.h
libtdfu/src/dfu/: dfu.c
libtdfu/src/firmware/: flash_descriptor.c  handshake.c  loader.c  reader.c  writer.c  writer.h
libtdfu/src/flash/: nand_db.c  nand_db.h  spi_nor_db.h
libtdfu/src/usb/: device.c  manager.c  protocol.c
tests/: CMakeLists.txt  test_config_database.c  test_ddr_integration.c  test_ddr_reference.c  test_file_ops.c  test_flash_db.c  test_protocol.c
udev/: 99-thingino-dfu.rules
web/: CMakeLists.txt  build.sh  index.html  package-lock.json  package.json  vite.config.js
web/libusb-stub/libusb-1.0/: libusb.h
web/public/: firmware  sw.js
web/src/: app.js  libusb-webusb.js  main.js  remote.js  web_main.c
